[package]
name = "ezerdesk-sdk"
version = "0.1.3"
edition = "2024"
description = "Official SDK for building WebAssembly plugins for the Ezerdesk helpdesk system."
license = "Apache-2.0"
repository = "https://github.com/jorgehc1/ezerdesk-sdk"
keywords = ["helpdesk", "plugin", "wasm", "ezerdesk"]
categories = ["api-bindings", "wasm"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ezerdesk-sdk-macros = "0.1.3"
